XMLtoCSV/objects/unpackaged/objects/Question_Response_vod__c.object
<CustomObject>
    <description>Stores response records for each account target to the survey questions.</description>
    <fields>
        <fullName>Answer_Choice_vod__c</fullName>
        <description>Copied from Survey_Question_vod when a Survey_Target_vod record is saved or submitted. Stores potential answer choices as they appeared to the user when the survey was saved or submitted.</description>
        <label>Answer Choices</label>
        <length>700</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_vod__c</fullName>
        <description>Stores the answer value for a date question.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Datetime_vod__c</fullName>
        <description>Stores the answer value for datetime questions.</description>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decimal_vod__c</fullName>
        <description>Stores the answer value for decimal type questions</description>
        <label>Decimal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID is used for data loading only.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>120</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Max_Score_vod__c</fullName>
        <description>Maximum possible score for the question</description>
        <label>Max Score</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_vod__c</fullName>
        <description>Stores the answer value for number questions.</description>
        <label>Number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_vod__c</fullName>
        <description>Stores the question&apos;s display order, copied from Survey_Question_vod when the Survey_Target_vod record is saved or submitted.</description>
        <label>Question Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Text_vod__c</fullName>
        <description>Copied from Survey_Question_vod when a Survey_Target_vod record is saved or submitted. Stores question text as it appeared to the user when the survey was saved or submitted.</description>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copied from Survey_Question_vod when the answer choice is recorded.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Hash_vod__c</fullName>
        <description>A hash generated based on the chosen response(s). For Long Text, Radio, Picklist, or Multiselect type questions, this is guaranteed to be null when the response is empty and non-null when the response is populated.</description>
        <inlineHelpText>This field is populated by concatenating base64 encoded MD5 hashes of the responses.</inlineHelpText>
        <label>Response Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_vod__c</fullName>
        <description>Stores the answer value for multiselect picklist, picklist, and radio questions.</description>
        <label>Response</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Score_vod__c</fullName>
        <description>Weight of the response selected by a user.  Applies to multiselect picklist, picklist, radio, and number questions.</description>
        <label>Weight</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Question_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links a question response to a particular question on a survey.</description>
        <label>Survey Question</label>
        <referenceTo>Survey_Question_vod__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Target_vod__c</fullName>
        <description>Links a question response to an account and survey.</description>
        <label>Survey Target</label>
        <referenceTo>Survey_Target_vod__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_vod__c</fullName>
        <description>Stores the answer value for both text and long-text questions</description>
        <label>Text</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Stores the RecordTypeId for the question type as copied from Survey_Question_vod.</description>
        <label>Question Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Question Response</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR{00000000}</displayFormat>
        <label>Question Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <recordTypes>
        <fullName>Approved_Email_vod</fullName>
        <active>true</active>
        <description>Record type for responses gathered through surveys sent via Approved Email</description>
        <label>Approved_Email_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CLM_vod</fullName>
        <active>true</active>
        <description>Record type for responses gathered from CLM presentations.</description>
        <label>CLM_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_Coaching_vod</fullName>
        <active>true</active>
        <description>Used for responses generated for the coaching report use case.</description>
        <label>CRM_Coaching_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>CRM_vod</fullName>
        <active>true</active>
        <description>Record type for responses gathered from Veeva CRM.</description>
        <label>CRM_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>